# Chatbot1

./: README.md
chatbot1/: chat_history.json  pyproject.toml
chatbot1/src/chatbot1/: __init__.py  chatbot.py  my_secret.py
